fixed overlapped logout

--- a/css/adminBar.less
+++ b/css/adminBar.less
@@ -26,6 +26,7 @@ body.admin-bar {
 			display: block;
 			background: #141414;
 			height: 65px;
+			margin-right: 65px;
 		}
 
 		.screen-reader-shortcut, .screen-reader-shortcut:focus {
